[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Aim.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enimies/Enemy_base.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enimies/Torretas/Turret_base.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.473, 32.5648 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.0914, 33.7916 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.9617, 33.5657 )

[node name="Turret_base" instance=ExtResource( 2 )]
collision_layer = 16
collision_mask = 19
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="HurtBox" parent="." index="2"]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="Hitbox" parent="." index="3"]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="Stats" parent="." index="4"]
MaxHealth = 2

[node name="StunTimer" type="Timer" parent="." index="5"]

[node name="Range" parent="." index="6" instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="Range" index="0"]
visible = false

[node name="ShootTimer" type="Timer" parent="." index="7"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]

[editable path="HurtBox"]

[editable path="Hitbox"]

[editable path="Range"]
